--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "babel-eslint": "^7.2.3",
     "body-parser": "^1.17.2",
+    "cron": "^1.2.1",
     "eslint-plugin-import": "^2.7.0",
     "express": "^4.15.3",
+    "moment": "^2.18.1",
     "request": "^2.81.0"
   },
   "devDependencies": {
