--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-import": "^2.7.0",
     "express": "^4.15.3",
     "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13",
     "request": "^2.81.0"
   },
   "devDependencies": {
