--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "node src/index.js",
-    "start": "node src/index.js"
+    "start": "export PORT=3006;node src/index.js",
+    "cron": "export PORT=3006;node src/cron.js"
   },
   "repository": {
     "type": "git",
