--- a/package.json
+++ b/package.json
@@ -26,14 +26,16 @@
     "express": "^4.15.3",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "sequelize": "^4.13.1",
+    "mysql2": "^1.4.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^7.2.3",
-    "eslint-plugin-import": "^2.7.0",
     "babel-preset-es2015-node6": "^0.4.0",
     "babel-preset-stage-2": "^6.24.1",
-    "eslint": "^4.3.0"
+    "eslint": "^4.3.0",
+    "eslint-plugin-import": "^2.7.0"
   }
 }
