--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "git+https://github.com/taiju59/okan-bot.git"
   },
   "author": "Taiju Aoki",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "bugs": {
     "url": "https://github.com/taiju59/okan-bot/issues"
   },
