--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=development ./node_modules/babel-cli/bin/babel-node.js src/index.js",
     "start": "NODE_ENV=production node build/index.js",
-    "test:cron": "NODE_ENV=development ./node_modules/babel-cli/bin/babel-node.js src/cron.js",
     "cron": "NODE_ENV=production node build/cron.js",
+    "test": "NODE_ENV=testing node build/index.js",
+    "test:cron": "NODE_ENV=testing node build/cron.js",
+    "dev": "NODE_ENV=development ./node_modules/babel-cli/bin/babel-node.js src/index.js",
+    "dev:cron": "NODE_ENV=development ./node_modules/babel-cli/bin/babel-node.js src/cron.js",
     "clean": "rm -rf build && mkdir build",
     "build": "npm run clean && ./node_modules/babel-cli/bin/babel.js -d ./build ./src"
   },
